--- a/E-Commerce/jpa/src/main/resources/application.properties
+++ b/E-Commerce/jpa/src/main/resources/application.properties
@@ -25,7 +25,7 @@ razorpay.key.id=rzp_test_1DP5mmOlF5G5ag
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=anindya121mukh@gmail.com
-spring.mail.password=uccx lojt ryml gxpw
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
